--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -2,8 +2,8 @@ name: Deploy GitHub Pages2
 
 on:
   # 仅在推送到默认分支时运行。
-  push:
-    branches: [ 'main' ]
+  # push:
+  #   branches: [ 'main' ]
 
   # 这个选项可以使你手动在 Action tab 页面触发工作流
   workflow_dispatch:
