--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "build": "tsc && vite build"
   },
   "devDependencies": {
+    "@types/node": "^22.9.1",
     "typescript": "^5.4.5",
-    "vite": "^5.4.8",
+    "vite": "^5.4.11",
     "vite-plugin-copy": "^0.1.6",
     "vite-plugin-static-copy": "^2.0.0"
   },
